--- a/styles.css
+++ b/styles.css
@@ -13,21 +13,19 @@ h1 {
     justify-content:space-between;
 }
 
-.screen {
+#screen {
     border: 2px solid rgb(19, 19, 181);
-    /* display: flex; */
     flex-basis: calc(100%);
     height: 100px;
     box-sizing: border-box; 
     align-items: center;
-    /* justify-content:space-between; */
     margin: 20px;
     padding-right: 20px;
     text-align: right;
     font-size: 80px;
 }
 
-.clear {
+#clear {
     border: 2px solid rgb(181, 19, 68);
     display: flex;
     height: 100px;
@@ -40,8 +38,7 @@ h1 {
     margin-left: 25px;
 
 }
-
-.del {
+#del {
     border: 2px solid rgb(181, 19, 68);
     display: flex;
     flex-wrap: wrap;
@@ -55,11 +52,10 @@ h1 {
 
 }
 
-
 .numbers {
-    border: 1px solid rgb(0, 187, 255);
+    border: 1px solid rgb(255, 0, 255);
     display: flex;
-    flex-basis: calc(100%/3);
+    flex-basis: calc(100%/4);
     box-sizing: border-box; 
     align-items: center;
     justify-content: center;
@@ -67,10 +63,10 @@ h1 {
 
 }
 
-.numberBox {
+#numberBox {
     display: flex;
     flex-wrap: wrap-reverse; 
-    width: 600px;
+    width: 745px;
     height: 400px;
     box-sizing: border-box; 
     border: 1px solid rgb(0, 187, 255);
@@ -79,7 +75,7 @@ h1 {
     margin-bottom: 25px;
 }
 
-.operatorBox {
+/* .operatorBox {
     display: flex;
     flex-direction: column;
     width: 100px;
@@ -100,4 +96,4 @@ h1 {
     box-sizing: border-box; 
     font-size: 40px;
 
-}
+} */
