--- a/styles.css
+++ b/styles.css
@@ -15,20 +15,38 @@ h1 {
 
 #screen {
     border: 2px solid rgb(19, 19, 181);
+    border-top: 0ch;
     flex-basis: calc(100%);
     height: 100px;
     box-sizing: border-box; 
     align-items: center;
     margin: 20px;
+    margin-top: 70px;
     padding-right: 20px;
     text-align: right;
     font-size: 80px;
 }
 
+#screenSmall {
+    /* display: flex;
+    flex-wrap: wrap; */
+    border: 2px solid rgb(19, 19, 181);
+    border-bottom: 0ch;
+    flex-basis: calc(100%);
+    height: 50px;
+    box-sizing: border-box; 
+    align-items: center;
+    margin: -170px 20px 0px 20px;
+    /* margin: 20px; */
+    padding-right: 20px;
+    text-align: right;
+    font-size: 20px;
+}
+
 #clear {
     border: 2px solid rgb(181, 19, 68);
     display: flex;
-    height: 100px;
+    height: 80px;
     width: 300px;
     box-sizing: border-box; 
     align-items: center;
@@ -42,7 +60,7 @@ h1 {
     border: 2px solid rgb(181, 19, 68);
     display: flex;
     flex-wrap: wrap;
-    height: 100px;
+    height: 80px;
     width: 300px;
     box-sizing: border-box; 
     align-items: center;
@@ -67,33 +85,10 @@ h1 {
     display: flex;
     flex-wrap: wrap-reverse; 
     width: 745px;
-    height: 400px;
+    height: 300px;
     box-sizing: border-box; 
     border: 1px solid rgb(0, 187, 255);
     margin-left: 25px;
     margin-top: auto;
     margin-bottom: 25px;
 }
-
-/* .operatorBox {
-    display: flex;
-    flex-direction: column;
-    width: 100px;
-    height: 400px;
-    border: 1px solid mediumturquoise;
-    margin-right: 25px;
-    margin-left: auto;
-    margin-bottom: 25px;
-    margin-top: auto;
-}
-
-.operator {
-    border: 1px solid mediumturquoise;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    flex-basis: calc(100%/3);
-    box-sizing: border-box; 
-    font-size: 40px;
-
-} */
